@@ -141,7 +141,7 @@ public class YearEndpointsTests {
         assert ascList.size() == descList.size();
 
         if(ascList.size() > 1) {
-            assert(ascList.get(0) != descList.get(0));
+            assert(ascList.getFirst() != descList.getFirst());
         }
     }
 
